apps/storefront/src/slices/common/IconGrid/icon-grid.module.scss
@import 'globals';

section.container {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: 1fr;
    justify-content: center;
    align-items: center;
    gap: calc(var(--block-spacer-huge) * 1.25);

    @media (min-width: $breakpoint-mobile) {
        gap: var(--block-spacer-huge);
        grid-template-rows: 100%;
        grid-template-columns: 1fr 1fr 1fr;
    }

    &[data-background='primary'] {
        --background-color: var(--color-accent-primary);
        --border-color: var(--color-accent-primary-dark);
        --color: var(--color-accent-primary-text);
    }
    &[data-background='secondary'] {
        --background-color: var(--color-accent-secondary-light);
        --border-color: var(--color-accent-secondary);
        --color: var(--color-accent-primary);
    }

    .item {
        position: relative;

        display: flex;
        justify-content: center;
        align-items: center;

        height: 100%;
        width: 100%;
        padding: calc(var(--block-padding) * 2.55) var(--block-padding) var(--block-padding) var(--block-padding);

        background-color: var(--background-color);
        color: var(--color);
        border-color: var(--border-color);

        border-radius: var(--block-border-radius);
        border-width: var(--block-border-width);
        border-style: solid;

        .icon {
            --size: 4.5rem;

            z-index: 9999;
            position: absolute;
            inset: calc(var(--size) * -0.45) auto auto auto;
            display: block;

            width: var(--size);
            height: var(--size);
            padding: var(--block-padding-small);

            object-position: center;
            object-fit: contain;

            background-color: var(--background-color);
            color: var(--color);
            border: var(--block-border-width) solid var(--border-color);
            border-radius: 100%;

            -webkit-user-select: none;
            user-select: none;
            pointer-events: none;
        }

        .title {
            font-size: 1.05em;
            font-weight: 700;
            line-height: 1.05;
            text-align: center;

            @media (min-width: $breakpoint-mobile) {
                padding: 0 var(--block-spacer);
            }
        }
    }
}

